--- a/high-fidelity-prototype/provider-prototype/provider-sign-up.html
+++ b/high-fidelity-prototype/provider-prototype/provider-sign-up.html
@@ -90,6 +90,11 @@
                 <label for="inputPhone" class="form-label">Phone Number</label>
                 <input type="tel" class="form-control" id="inputPhone" placeholder="e.g. 123-456-7890">
             </div>
+            <div class="mb-3">
+                <label for="inputCities" class="form-label">Cities You Can Provide Services To</label>
+                <textarea class="form-control" id="inputCities" name="cities" rows="3"
+                    placeholder="Enter each city on a new line or separate by commas"></textarea>
+            </div>
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-3 col-form-label">Email</label>
                 <div class="col-sm-10">
@@ -102,29 +107,7 @@
                     <input type="password" class="form-control" id="inputPassword3">
                 </div>
             </div>
-            <div class="mb-3">
-                <label for="cityInput" class="form-label">Cities You Can Provide Services To</label>
-  <input id="cityInput" name="service_cities" placeholder="Type cities..." class="form-control">
-                <select multiple class="form-select" id="serviceCities" name="service_cities[]">
-                    <option>Charlotte</option>
-                    <option>Raleigh</option>
-                    <option>Greensboro</option>
-                    <option>Durham</option>
-                    <option>Winston-Salem</option>
-                    <option>Fayetteville</option>
-                    <option>Cary</option>
-                    <option>Wilmington</option>
-                    <option>High Point</option>
-                    <option>Asheville</option>
-                    <option>Greenville</option>
-                    <option>Concord</option>
-                    <option>Gastonia</option>
-                    <option>Chapel Hill</option>
-                    <option>Rocky Mount</option>
-                </select>
-                <small class="form-text text-muted">Hold Ctrl (Windows) or Command (Mac) to select multiple
-                    cities.</small>
-            </div>
+
             <div class="mb-3">
                 <label for="formFileMultiple" class="form-label">Upload certifications or licenses (if
                     applicable)</label>
