--- a/high-fidelity-prototype/provider-prototype/provider-sign-up.html
+++ b/high-fidelity-prototype/provider-prototype/provider-sign-up.html
@@ -113,8 +113,9 @@
                     applicable)</label>
                 <input class="form-control" type="file" id="formFileMultiple" multiple>
             </div>
-            <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Sign
-                Up</button>
+           <a href="provider-profile.html" class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">
+  Sign Up
+</a>
         </form>
     </div>
 
