--- a/high-fidelity-prototype/provider-prototype/provider-profile.html
+++ b/high-fidelity-prototype/provider-prototype/provider-profile.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-        <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,8 +13,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
 </head>
+
 <body>
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(255, 123, 0);">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(255, 123, 0);">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Trotter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -29,7 +31,7 @@
                         <a class="nav-link" href="#">Service Providers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact-us">Contact Us</a>
+                        <a class="nav-link" href="../homepage.html#contact-us">Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,7 +40,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end"> <!-- Aligns dropdown to the right -->
                             <li><a class="dropdown-item" href="#">Log In</a></li>
-                            <li><a class="dropdown-item" href="#Home">Sign Up</a></li>
+                            <li><a class="dropdown-item" href="../homepage.html#Home">Sign Up</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -50,5 +52,16 @@
             </div>
         </div>
     </nav>
+
+    <br>
+    <h5 class="text-center mb-4">Account Settings</h5>
+    <h6 class="text-center mb-4">Account Information</h5>
+        <div class="container mt-5 d-flex justify-content-center">
+
+
+
+        </div>
+
 </body>
+
 </html>
