--- a/high-fidelity-prototype/provider-prototype/provider-sign-up.html
+++ b/high-fidelity-prototype/provider-prototype/provider-sign-up.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#">Service Providers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact-us">Contact Us</a>
+                        <a class="nav-link" href="../homepage.html#contact-us">Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -113,9 +113,10 @@
                     applicable)</label>
                 <input class="form-control" type="file" id="formFileMultiple" multiple>
             </div>
-           <a href="provider-profile.html" class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">
-  Sign Up
-</a>
+            <a href="provider-profile.html" class="btn btn-primary"
+                style="background-color: rgb(255, 123, 0); border-color: orange;">
+                Sign Up
+            </a>
         </form>
     </div>
 
