--- a/high-fidelity-prototype/provider-prototype/provider-profile.html
+++ b/high-fidelity-prototype/provider-prototype/provider-profile.html
@@ -59,9 +59,27 @@
         <div class="container mt-5 d-flex justify-content-center">
 
 
+    <div class="text-center">
+          <a href="#Modify">
+    <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Modify Account Information</button>
+  </a>
+  <a href="client-sign-up.html">
+    <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Remove Account</button>
+  </a>
+    </div>
 
         </div>
 
+        
+    <div class="Modify text-center">
+          <h5 class="text-center mb-4">Sign Up As</h5>
+          <a href="provider-prototype/provider-sign-up.html">
+    <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Provider</button>
+  </a>
+  <a href="client-sign-up.html">
+    <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Client</button>
+  </a>
+    </div>
 </body>
 
 </html>
