--- a/high-fidelity-prototype/provider-prototype/provider-profile.html
+++ b/high-fidelity-prototype/provider-prototype/provider-profile.html
@@ -51,35 +51,102 @@
 
             </div>
         </div>
-    </nav>
-
-    <br>
-    <h5 class="text-center mb-4">Account Settings</h5>
-    <h6 class="text-center mb-4">Account Information</h5>
-        <div class="container mt-5 d-flex justify-content-center">
-
-
-    <div class="text-center">
-          <a href="#Modify">
-    <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Modify Account Information</button>
-  </a>
-  <a href="client-sign-up.html">
-    <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Remove Account</button>
-  </a>
-    </div>
-
+    </nav><br>
+    <div class="position-relative">
+        <!-- Remove Account button aligned to top-right -->
+        <div class="position-absolute top-0 end-0">
+            <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;"
+                onclick="confirmRemoval()">
+                Remove Account
+            </button>
         </div>
+        <a href="provider-create-service.html">
+            <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Create
+                Service</button>
+        </a>
 
-        
-    <div class="Modify text-center">
-          <h5 class="text-center mb-4">Sign Up As</h5>
-          <a href="provider-prototype/provider-sign-up.html">
-    <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Provider</button>
-  </a>
-  <a href="client-sign-up.html">
-    <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Client</button>
-  </a>
-    </div>
+        <h5 class="text-center mb-4">Account Settings</h5>
+        <h6 class="text-center mb-4">Account Information</h5>
+
+            <div class="container mt-5" style="max-width: 600px;">
+
+                <!-- Name -->
+                <div class="setting-group" id="group-name">
+                    <div class="setting-label">Name</div>
+                    <div class="setting-view d-flex justify-content-between">
+                        <div><span id="text-first-name">Cynthia</span> <span id="text-last-name">Espinoza</span></div>
+                        <button class="btn btn-sm btn-outline-primary" onclick="toggleEdit('name')">Edit</button>
+                    </div><br>
+
+                    <!-- Address -->
+                    <div class="setting-group" id="group-address">
+                        <div class="setting-label">Address</div>
+                        <div class="setting-view d-flex justify-content-between">
+                            <div>
+                                <div id="text-address">1234 Summerfield Rd.</div>
+                            </div>
+                            <button class="btn btn-sm btn-outline-primary" onclick="toggleEdit('address')">Edit</button>
+                        </div>
+                        <br>
+                        <!-- Phone -->
+                        <div class="setting-group" id="group-phone">
+                            <div class="setting-label">Phone Number</div>
+                            <div class="setting-view d-flex justify-content-between">
+                                <div id="text-phone">123-456-7890</div>
+                                <button class="btn btn-sm btn-outline-primary"
+                                    onclick="toggleEdit('phone')">Edit</button>
+                            </div><br>
+
+
+                            <!-- Cities -->
+                            <div class="setting-group" id="group-cities">
+                                <div class="setting-label">Cities You Can Provide Services To:</div>
+                                <div class="setting-view d-flex justify-content-between">
+                                    <div id="text-cities">Greensboro</div>
+                                    <button class="btn btn-sm btn-outline-primary"
+                                        onclick="toggleEdit('cities')">Edit</button>
+                                </div><br>
+
+                                <!-- Email -->
+                                <div class="setting-group" id="group-email">
+                                    <div class="setting-label">Email</div>
+                                    <div class="setting-view d-flex justify-content-between align-items-center">
+                                        <div id="text-email">darlenemosqueda4@gmail.com</div>
+                                        <button class="btn btn-sm btn-outline-primary"
+                                            onclick="toggleEdit('email')">Edit</button>
+                                    </div><br>
+                                </div><br>
+
+                                <div class="setting-group" id="group-password">
+                                    <div class="setting-label">Password</div>
+                                    <div class="setting-view d-flex justify-content-between">
+                                        <div id="text-password">••••••••••</div>
+                                        <button class="btn btn-sm btn-outline-danger"
+                                            onclick="toggleEdit('password')">Change</button>
+                                    </div><br>
+
+                                    <div class="setting-group" id="group-certifications">
+                                        <div class="setting-label">Certifications or Licenses</div>
+                                        <div class="setting-view d-flex justify-content-between">
+                                            <div id="text-certifications">None uploaded</div>
+                                            <button class="btn btn-sm btn-outline-primary"
+                                                onclick="toggleEdit('certifications')">Upload</button>
+                                        </div>
+                                        <div class="container mt-5 d-flex justify-content-center">
+
+                                        </div>
+
+
+                                        <!-- JavaScript confirmation logic -->
+                                        <script>
+                                            function confirmRemoval() {
+                                                const confirmed = confirm("Are you sure you want to remove your account?");
+                                                if (confirmed) {
+                                                    // Redirect or handle account removal logic
+                                                    window.location.href = "../homepage.html"; // Or your deletion endpoint
+                                                }
+                                            }
+                                        </script>
 </body>
 
 </html>
