--- a/high-fidelity-prototype/provider-prototype/provider-create-service.html
+++ b/high-fidelity-prototype/provider-prototype/provider-create-service.html
@@ -48,11 +48,15 @@
                         </ul>
                     </li>
                 </ul>
-
             </div>
         </div>
     </nav><br>
+    
+    <div class="Home text-center">
+        <h4>Create Your Service Below</h4>
+    </div>
     <div class="container mt-5" style="max-width: 600px;">
+
         <div class="mb-3">
             <label for="formGroupExampleInput" class="form-label">Service Title(Optional)</label>
             <input type="text" class="form-control" id="formGroupExampleInput"
