--- a/high-fidelity-prototype/provider-prototype/provider-profile.html
+++ b/high-fidelity-prototype/provider-prototype/provider-profile.html
@@ -39,20 +39,24 @@
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end"> <!-- Aligns dropdown to the right -->
-                            <li><a class="dropdown-item" href="#">Log In</a></li>
-                            <li><a class="dropdown-item" href="../homepage.html#Home">Sign Up</a></li>
+                            <li><a class="dropdown-item" href="provider-create-service.html">Create
+                                    Service</a></li>
+                            <li><a class="dropdown-item" href="provider-cust-stats.html">Customer Statistics</a></li>
+                             <li><a class="dropdown-item" href="provider-reply-reviews.html">Reviews</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="provider-profile.html">My Profile</a></li>
                         </ul>
                     </li>
                 </ul>
 
             </div>
         </div>
-    </nav><br>
-    <div class="position-relative">
+    </nav>
+    <div class="position-relative bg-light"> <br></div>
+
+    <div class="position-relative bg-light">
         <!-- Remove Account button aligned to top-right -->
         <div class="position-absolute top-0 end-0">
             <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;"
@@ -60,10 +64,6 @@
                 Remove Account
             </button>
         </div>
-        <a href="provider-create-service.html">
-            <button class="btn btn-primary" style="background-color: rgb(255, 123, 0); border-color: orange;">Create
-                Service</button>
-        </a>
 
         <h5 class="text-center mb-4">Account Settings</h5>
         <h6 class="text-center mb-4">Account Information</h5>
@@ -147,6 +147,7 @@
                                                 }
                                             }
                                         </script>
+
 </body>
 
 </html>
