--- a/high-fidelity-prototype/provider-prototype/provider-sign-up.html
+++ b/high-fidelity-prototype/provider-prototype/provider-sign-up.html
@@ -54,7 +54,7 @@
     </nav>
 
     <br>
-    <h5 class="text-center mb-4">Your Journey as a Trusted Provider Starts Here.</h5>
+    <h5 class="text-center mb-4 bg-light">Your Journey as a Trusted Provider Starts Here.</h5>
     <div class="container mt-5 d-flex justify-content-center">
         <form>
             <div class="row">
