--- a/high-fidelity-prototype/provider-prototype/provider-cust-stats.html
+++ b/high-fidelity-prototype/provider-prototype/provider-cust-stats.html
@@ -43,12 +43,14 @@
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end"> <!-- Aligns dropdown to the right -->
-                            <li><a class="dropdown-item" href="#">Log In</a></li>
-                            <li><a class="dropdown-item" href="../homepage.html#Home">Sign Up</a></li>
+                            <li><a class="dropdown-item" href="provider-create-service.html">Create
+                                    Service</a></li>
+                            <li><a class="dropdown-item" href="provider-cust-stats.html">View Customer Statistics</a></li>
+                            <li><a class="dropdown-item" href="provider-reply-reviews.html">Reviews</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="provider-profile.html">My Profile</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -86,11 +88,11 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+        <div class="col-md-3">
       <div class="card shadow-sm">
         <div class="card-body">
-          <a href="provider-reply-reviews.html"><h5 class="card-title">Avg. Rating</h5></a>
-          <h2>4.6 ★</h2>
+          <h5 class="card-title">Avg. Rating</h5>
+          <h2>4.6 <i class="bi bi-star-fill" style="color: gold;"></i></h2>
         </div>
       </div>
     </div>
