--- a/high-fidelity-prototype/provider-prototype/provider-reply-reviews.html
+++ b/high-fidelity-prototype/provider-prototype/provider-reply-reviews.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,7 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(255, 123, 0);">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(255, 123, 0);">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Trotter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -38,12 +39,13 @@
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end"> <!-- Aligns dropdown to the right -->
-                            <li><a class="dropdown-item" href="#">Log In</a></li>
-                            <li><a class="dropdown-item" href="../homepage.html#Home">Sign Up</a></li>
+                             <li><a class="dropdown-item" href="provider-create-service.html">Create
+                                    Service</a></li>
+                            <li><a class="dropdown-item" href="provider-cust-stats.html">Customer Statistics</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="provider-profile.html">My Profile</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -51,6 +53,89 @@
         </div>
     </nav><br>
 
-    
+    <div class="container text-center">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Avg. Rating</h5>
+                        <h2>4.6 <i class="bi bi-star-fill" style="color: gold;"></i></h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br><b>Reviews</b>
+    </div>
+    <br>
+    <div class="container">
+        <div class="mx-auto" style="max-width: 900px;">
+            <div class="row g-3 align-items-center">
+                <div class="col-md-2">
+                    <img src="../images/customer1.jpg" class="img-fluid rounded-start" alt="Customer photo">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            Dog Grooming Service
+                            <i class="bi bi-star-fill" style="color: gold;"></i>
+                            <i class="bi bi-star-fill" style="color: gold;"></i>
+                            <i class="bi bi-star-fill" style="color: gold;"></i>
+                            <i class="bi bi-star-fill" style="color: gold;"></i>
+                            <i class="bi bi-star-fill" style="color: gold;"></i>
+                        </h5>
+                        <br><b>"Outstanding!"</b>
+                        <p class="card-text">
+                            I couldn't be happier with the service! My golden retriever, Max, came out looking and
+                            smelling amazing.
+                            The groomers were so gentle and clearly love what they do. They even trimmed his nails and
+                            added a cute little bandana!
+                            The appointment was easy to book, and they were right on time.
+                            Highly recommend to any pet parent looking for a caring and professional grooming
+                            experience!
+                        </p>
+                    </div><br>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#replyModal"
+                        style="background-color: rgb(255, 123, 0); border-color: orange;">
+                        Reply
+                    </button>
+                    <!-- Reply Modal -->
+                    <div class="modal fade" id="replyModal" tabindex="-1" aria-labelledby="replyModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form>
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="replyModalLabel">Reply to Review</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="mb-3">
+                                            <label for="replyText" class="form-label">Your Reply</label>
+                                            <textarea class="form-control" id="replyText" rows="4"
+                                                placeholder="Write your reply here..."></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Cancel</button>
+                                        <button type="submit" class="btn btn-primary"
+                                            style="background-color: rgb(255, 123, 0); border-color: orange;">Send
+                                            Reply</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 </body>
+
 </html>
