--- a/high-fidelity-prototype/provider-prototype/provider-reply-reviews.html
+++ b/high-fidelity-prototype/provider-prototype/provider-reply-reviews.html
@@ -39,9 +39,10 @@
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end"> <!-- Aligns dropdown to the right -->
-                             <li><a class="dropdown-item" href="provider-create-service.html">Create
+                            <li><a class="dropdown-item" href="provider-create-service.html">Create
                                     Service</a></li>
                             <li><a class="dropdown-item" href="provider-cust-stats.html">Customer Statistics</a></li>
+                            <li><a class="dropdown-item" href="provider-reply-reviews.html">Reviews</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
