--- a/high-fidelity-prototype/homepage.html
+++ b/high-fidelity-prototype/homepage.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#Trotter">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Service Providers</a>
