--- a/high-fidelity-prototype/homepage.html
+++ b/high-fidelity-prototype/homepage.html
@@ -29,7 +29,7 @@
                         <a class="nav-link active" aria-current="page" href="#Trotter">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Service Providers</a>
+                        <a class="nav-link" href="#">Services Available</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact-us">Contact Us</a>
