--- a/high-fidelity-prototype/provider-prototype/provider-profile.html
+++ b/high-fidelity-prototype/provider-prototype/provider-profile.html
@@ -28,7 +28,7 @@
                         <a class="nav-link active" aria-current="page" href="../homepage.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Service Providers</a>
+                        <a class="nav-link" href="#">Services Available</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../homepage.html#contact-us">Contact Us</a>
