--- a/high-fidelity-prototype/homepage.html
+++ b/high-fidelity-prototype/homepage.html
@@ -40,7 +40,7 @@
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end"> <!-- Aligns dropdown to the right -->
-                            <li><a class="dropdown-item" href="#">Log In</a></li>
+                            <li><a class="dropdown-item" href="log-in.html">Log In</a></li>
                             <li><a class="dropdown-item" href="#Home">Sign Up</a></li>
                         </ul>
                     </li>
@@ -60,7 +60,7 @@
             </div>
             <div class="col-auto">
                 <button type="submit" class="btn btn-primary"
-                    style="background-color: rgb(255, 98, 0); border-color: rgb(255, 98, 0);">
+                    style="background-color: brown; border-color: brown; color: white;">
                     Subscribe
                 </button>
             </div>
