--- a/high-fidelity-prototype/provider-prototype/provider-sign-up.html
+++ b/high-fidelity-prototype/provider-prototype/provider-sign-up.html
@@ -39,7 +39,7 @@
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end"> <!-- Aligns dropdown to the right -->
-                            <li><a class="dropdown-item" href="#">Log In</a></li>
+                            <li><a class="dropdown-item" href="../log-in.html">Log In</a></li>
                             <li><a class="dropdown-item" href="../homepage.html#Home">Sign Up</a></li>
                            
                         </ul>
