--- a/high-fidelity-prototype/log-in.html
+++ b/high-fidelity-prototype/log-in.html
@@ -60,10 +60,10 @@
                 style="height: 50px; font-size: 1.1rem; border-width: 2px;">
         </div>
             <div class=" mb-3">
-              <button type="submit" class="btn btn-primary"
-                    style="background-color: brown; border-color: brown; color: white;">
-                    Log In
-                </button>
+                  <a href="homepage.html" class="btn btn-primary"
+                style="background-color: brown; border-color: brown; color: white;">
+                Log In
+            </a>
         </div>
     </div>
   <br> <br> <br> <br> <br> <br> <br>
