--- a/high-fidelity-prototype/homepage.html
+++ b/high-fidelity-prototype/homepage.html
@@ -129,7 +129,7 @@
          style="background-color: rgb(255, 123, 0); border-color: orange;">
         👩‍🔧 Provider
       </a>
-      <a href="client-sign-up.html" class="btn btn-lg btn-primary"
+      <a href="customer-prototype/customer-sign-up.html" class="btn btn-lg btn-primary"
          style="background-color: rgb(255, 123, 0); border-color: orange;">
         🛍️ Client
       </a>
